HW 3.6(5)