@@ -8,13 +8,12 @@ import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
+import ru.hogwarts.schoolspring.controller.FacultyController;
 import ru.hogwarts.schoolspring.model.Faculty;
 import ru.hogwarts.schoolspring.model.Student;
 import ru.hogwarts.schoolspring.repositories.FacultyRepository;
-
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -23,16 +22,17 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class FacultyControllerTest {
 
-    List<Faculty> savedFaculties;
     @LocalServerPort
     private int port;
 
     @Autowired
-
     private FacultyRepository facultyRepository;
-    @Autowired
 
+    @Autowired
     private TestRestTemplate restTemplate;
+
+    @Autowired
+    private FacultyController facultyController;
 
     @AfterEach
     void tearUp() {
@@ -52,7 +52,7 @@ public class FacultyControllerTest {
         ResponseEntity<Faculty> newFaculty = restTemplate
                 .postForEntity("http://localhost:" + port + "/faculty", faculty, Faculty.class);
         assertThat(newFaculty.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(newFaculty.getBody().getName()).isEqualTo(name);
+        assertThat(Objects.requireNonNull(newFaculty.getBody()).getName()).isEqualTo(name);
         assertThat(newFaculty.getBody().getColor()).isEqualTo(color);
     }
 
@@ -73,7 +73,8 @@ public class FacultyControllerTest {
         assertThat(newFaculty.getStatusCode()).isEqualTo(HttpStatus.OK);
 
         ResponseEntity<Faculty> facultyResponseEntity = restTemplate
-                .getForEntity("http://localhost:" + port + "/faculty/" + newFaculty.getBody().getId(), Faculty.class);
+                .getForEntity("http://localhost:" + port + "/faculty/" +
+                        Objects.requireNonNull(newFaculty.getBody()).getId(), Faculty.class);
 
         assertThat(facultyResponseEntity.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(facultyResponseEntity.getBody()).isNotNull();
@@ -99,12 +100,10 @@ public class FacultyControllerTest {
         assertThat(newFaculty.getStatusCode()).isEqualTo(HttpStatus.OK);
 
         ResponseEntity<List<Faculty>> response = restTemplate.exchange(
-                "http://localhost:" + port + "/faculty?color=" + newFaculty.getBody().getColor(), HttpMethod.GET,
-                null, new ParameterizedTypeReference<List<Faculty>>() {
+                "http://localhost:" + port + "/faculty?color=" + Objects.requireNonNull(newFaculty.getBody()).
+                        getColor(), HttpMethod.GET,
+                null, new ParameterizedTypeReference<>() {
                 });
-
-    /*    ResponseEntity<Faculty> facultyResponseEntity = restTemplate
-                .getForEntity("http://localhost:" + port + "/faculty?color=" + newFaculty.getBody().getColor(), Faculty.class);*/
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).isNotNull();
@@ -130,7 +129,8 @@ public class FacultyControllerTest {
         assertThat(newFaculty.getStatusCode()).isEqualTo(HttpStatus.OK);
 
         ResponseEntity<List<Faculty>> response = restTemplate.exchange(
-                "http://localhost:" + port + "/faculty?name=" + newFaculty.getBody().getName(), HttpMethod.GET,
+                "http://localhost:" + port + "/faculty?name=" + Objects.requireNonNull(newFaculty.getBody()).
+                        getName(), HttpMethod.GET,
                 null, new ParameterizedTypeReference<List<Faculty>>() {
                 });
 
@@ -141,7 +141,6 @@ public class FacultyControllerTest {
     }
 
 
-
     @Test
     public void getAllFacultyTest() throws Exception {
         ResponseEntity<List<Faculty>> response = restTemplate.exchange(
@@ -150,10 +149,9 @@ public class FacultyControllerTest {
                 });
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(MediaType.APPLICATION_JSON, response.getHeaders().getContentType());
-        List<Faculty> actualFaculty = response.getBody().stream().collect(Collectors.toList());
+        List<Faculty> actualFaculty = Objects.requireNonNull(response.getBody()).stream().toList();
         assertEquals(0, actualFaculty.size());
     }
-
 
 
     @Test
@@ -170,7 +168,7 @@ public class FacultyControllerTest {
                 .postForEntity("http://localhost:" + port + "/faculty", faculty, Faculty.class);
 
         ResponseEntity<Void> facultyResponseEntity = restTemplate.exchange
-                ("http://localhost:" + port + "/faculty/" + newFaculty.getBody().getId(),
+                ("http://localhost:" + port + "/faculty/" + Objects.requireNonNull(newFaculty.getBody()).getId(),
                         HttpMethod.DELETE, HttpEntity.EMPTY, Void.class);
         assertNull(facultyResponseEntity.getBody());
         assertThat(facultyResponseEntity.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -198,48 +196,34 @@ public class FacultyControllerTest {
         editfaculty.setName(editName);
         editfaculty.setColor(editColor);
 
-        editfaculty.setId(newFaculty.getBody().getId());
+        editfaculty.setId(Objects.requireNonNull(newFaculty.getBody()).getId());
 
 
         ResponseEntity<Faculty> response = restTemplate
-                .exchange("http://localhost:" + port + "/faculty/" + editfaculty.getId(), HttpMethod.PUT, new HttpEntity<>(editfaculty), Faculty.class);
+                .exchange("http://localhost:" + port + "/faculty/" + editfaculty.getId(), HttpMethod.PUT,
+                        new HttpEntity<>(editfaculty), Faculty.class);
 
-        assertThat(response.getBody().getName()).isEqualTo(editfaculty.getName());
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(Objects.requireNonNull(response.getBody()).getName()).isEqualTo(editfaculty.getName());
         assertThat(response.getBody().getColor()).isEqualTo(editfaculty.getColor());
         assertThat(response.getBody().getId()).isEqualTo(editfaculty.getId());
     }
 
     @Test
-    public void findStudentsFromFacultyTest() throws Exception {
-        Long facultyId = 1L;
-        List <Student> expectedStudents = new ArrayList<>();
-        expectedStudents.add(new Student("rrr", 11));
+    public void findStudentsFromFacultyTest1() throws Exception {
 
-        ResponseEntity<List<Student>> response = restTemplate.exchange(
-                "http://localhost:" + port + "/faculty/{id}/students",
-                HttpMethod.GET,
-                null,
-                new ParameterizedTypeReference<List<Student>>() {},
-                facultyId);
-
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-
-        List<Student> actualStudents = response.getBody();
-        assertThat(actualStudents).isEqualTo(expectedStudents);
-        assertThat(actualStudents.contains(expectedStudents.get(0)));
-    }
-
-        /*final String name = "Тестовый факультет";
+        final String name = "Тестовый факультет";
         final String color = "Тестовый цвет";
+        final long facultyId = 20L;
 
-        final String nameStudent = "Тестовый";
-        final int age = 101;
+        final String nameStudent = "Тестовый студент";
+        final int age = 11;
+        final long id = 1L;
 
         Faculty faculty = new Faculty();
-
         faculty.setName(name);
         faculty.setColor(color);
-
+        faculty.setId(facultyId);
         ResponseEntity<Faculty> newFaculty = restTemplate
                 .postForEntity("http://localhost:" + port + "/faculty", faculty, Faculty.class);
 
@@ -247,23 +231,20 @@ public class FacultyControllerTest {
 
         student.setName(nameStudent);
         student.setAge(age);
+        student.setId(id);
         student.setFaculty(newFaculty.getBody());
 
         ResponseEntity<Student> newStudent = restTemplate
                 .postForEntity("http://localhost:" + port + "/student", student, Student.class);
 
-        List<Student> list = restTemplate.getForObject("http://localhost:" + port + "/faculty/" +
-                newFaculty.getBody().getId() + "/students",List.class);
+        ResponseEntity<List<Student>> response = restTemplate.exchange(
+                "http://localhost:" + port + "/faculty/{id}/students", HttpMethod.GET,
+                null, new ParameterizedTypeReference<List<Student>>() {},facultyId);
 
-        *//* ResponseEntity<Faculty> newFaculty = restTemplate
-                .postForEntity("http://localhost:" + port + "/faculty", faculty, Faculty.class);
-        assertThat(newFaculty.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response).isNotNull();
+        assertThat(Objects.requireNonNull(response.getBody()).contains(newStudent.getBody()));
+        assertThat(response.getBody().equals(newStudent.getBody()));
 
-        ResponseEntity<List<Faculty>> response = restTemplate.exchange(
-                "http://localhost:" + port + "/faculty?name=" + newFaculty.getBody().getName(), HttpMethod.GET,
-                null, new ParameterizedTypeReference<List<Faculty>>() {
-                });*//*
-
-        assertThat(list).isNotNull();
-        assertThat(list.contains(newStudent.getBody()));*/
     }
+}
